[gd_scene load_steps=7 format=3 uid="uid://c18a3xui3vslf"]

[ext_resource type="Script" path="res://scenes/GameOverScreen/game_over_screen.gd" id="1_oeq02"]
[ext_resource type="Texture2D" uid="uid://b5nerhm28wmc" path="res://assets/images/ui/end_game_popup.png" id="1_wj44y"]
[ext_resource type="LabelSettings" uid="uid://gji5k8k2bljl" path="res://assets/fonts/font_effects/new_label_settings.tres" id="2_4q22t"]

[sub_resource type="Animation" id="Animation_5d8ol"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(603, 256)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(338.5, 170)]
}

[sub_resource type="Animation" id="Animation_vp68m"]
resource_name = "game_over_popup_animation"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(603, 256)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(640, 170), Vector2(338.5, 170)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5sr58"]
_data = {
"RESET": SubResource("Animation_5d8ol"),
"game_over_popup_animation": SubResource("Animation_vp68m")
}

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oeq02")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0779955, 0.0396203, 0.273007, 0.329412)

[node name="TextureRect" type="TextureRect" parent="."]
clip_contents = true
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -301.5
offset_top = -190.0
offset_right = 301.5
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("1_wj44y")
expand_mode = 1
stretch_mode = 4

[node name="UIMarginContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScoreMarginContainer" type="MarginContainer" parent="UIMarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 400
theme_override_constants/margin_right = 400

[node name="HBoxContainer" type="HBoxContainer" parent="UIMarginContainer/ScoreMarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20
alignment = 1

[node name="ScoreText" type="Label" parent="UIMarginContainer/ScoreMarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "High Score:"
label_settings = ExtResource("2_4q22t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreValue" type="Label" parent="UIMarginContainer/ScoreMarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "000"
label_settings = ExtResource("2_4q22t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverPopupAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5sr58")
}

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="timeout" from="GameOverTimer" to="." method="_on_game_over_timer_timeout"]
